Change CSS class prefix to `cmw-`

--- a/packages/codemirror-workspace/css/default.css
+++ b/packages/codemirror-workspace/css/default.css
@@ -1,12 +1,12 @@
 :root {
-  --color-cm-lsp-error: #e03131;
-  --color-cm-lsp-warning: #fcc419;
-  --color-cm-lsp-information: #74c0fc;
-  --color-cm-lsp-hint: #fd7e14;
+  --color-cmw-error: #e03131;
+  --color-cmw-warning: #fcc419;
+  --color-cmw-information: #74c0fc;
+  --color-cmw-hint: #fd7e14;
 }
 
 /* Gutter */
-.cm-lsp-gutter {
+.cmw-gutter {
   width: 10px;
 }
 
@@ -111,43 +111,43 @@
 }
 
 /* Completion item details shown on the right of completion popup. */
-.cm-lsp-completion-item-doc,
+.cmw-completion-item-doc,
 /* Hover Information and Signature Help */
-.cm-lsp-tooltip {
+.cmw-tooltip {
   background: white;
   border: 1px solid black;
 }
 
 /* Text Marker styles for Document Highlight */
-.cm-lsp-highlight {
+.cmw-highlight {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* Text Marker styles for Diagnostics */
-.cm-lsp-mark-error {
-  text-decoration: underline wavy var(--color-cm-lsp-error);
+.cmw-mark-error {
+  text-decoration: underline wavy var(--color-cmw-error);
 }
-.cm-lsp-mark-warning {
-  text-decoration: underline dashed var(--color-cm-lsp-warning);
+.cmw-mark-warning {
+  text-decoration: underline dashed var(--color-cmw-warning);
 }
-.cm-lsp-mark-information {
-  text-decoration: underline dotted var(--color-cm-lsp-information);
+.cmw-mark-information {
+  text-decoration: underline dotted var(--color-cmw-information);
 }
-.cm-lsp-mark-hint {
-  text-decoration: underline dotted var(--color-cm-lsp-hint);
+.cmw-mark-hint {
+  text-decoration: underline dotted var(--color-cmw-hint);
 }
 
 /* Gutter Marker Colors */
 /* TODO We should make marks customizable, not just the color. */
-.cm-lsp-guttermark-error {
-  color: var(--color-cm-lsp-error);
+.cmw-guttermark-error {
+  color: var(--color-cmw-error);
 }
-.cm-lsp-guttermark-warning {
-  color: var(--color-cm-lsp-warning);
+.cmw-guttermark-warning {
+  color: var(--color-cmw-warning);
 }
-.cm-lsp-guttermark-information {
-  color: var(--color-cm-lsp-information);
+.cmw-guttermark-information {
+  color: var(--color-cmw-information);
 }
-.cm-lsp-guttermark-hint {
-  color: var(--color-cm-lsp-hint);
+.cmw-guttermark-hint {
+  color: var(--color-cmw-hint);
 }
