Add context menu

--- a/packages/codemirror-workspace/css/default.css
+++ b/packages/codemirror-workspace/css/default.css
@@ -160,3 +160,35 @@
 .cmw-snippet-final-tabstop {
   border-left: 2px solid rgba(0, 0, 0, 0.6);
 }
+
+/* Context Menu */
+.cmw-context-menu {
+  font-family: sans-serif;
+  font-size: 14px;
+  padding: 0;
+  border-radius: 2px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #495057;
+  background-color: #f8f9fa;
+  color: #495057;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+.cmw-context-menu-item {
+  padding: 4px 8px;
+  cursor: pointer;
+}
+.cmw-context-menu-item[disabled] {
+  cursor: default;
+}
+.cmw-context-menu-item:not([disabled]):hover {
+  background-color: #e9ecef;
+  text-decoration: underline;
+}
+.cmw-context-menu-item-separator {
+  border: 0;
+  height: 1px;
+  background-color: #495057;
+  margin: 4px 8px;
+}
