--- a/packages/codemirror-workspace/css/default.css
+++ b/packages/codemirror-workspace/css/default.css
@@ -133,11 +133,47 @@
   border: 1px solid #495057;
   border-radius: 2px;
   font-family: sans-serif;
-  font-size: 14px;
-  padding: 0;
+  font-size: 12px;
+  padding: 2px;
+  z-index: 10;
+  position: absolute;
+  max-width: 50ch;
+  max-height: 120px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
+.cmw-tooltip > div {
+  overflow-y: auto;
+}
+.cmw-tooltip .cmw-tooltip-close {
+  position: absolute;
+  top: -8px;
+  right: -12px;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  opacity: 0;
+  padding: 2px;
+  transition: opacity 0.1s ease-in-out;
+}
+.cmw-tooltip .cmw-tooltip-close::before {
+  content: "×";
+  display: block;
+  width: 14px;
+  height: 14px;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  border-radius: 8px;
+  background-color: #495057;
+  color: #f8f9fa;
+}
+.cmw-tooltip:hover .cmw-tooltip-close,
+.cmw-tooltip:focus .cmw-tooltip-close,
+.cmw-tooltip-close:hover {
+  opacity: 1;
+}
+
 /* Markdown */
 .cmw-completion-item-doc pre,
 .cmw-tooltip pre,
